small fix to an input overflow in sign up form

--- a/frontend/src/components/SessionForms/SignupForm.css
+++ b/frontend/src/components/SessionForms/SignupForm.css
@@ -7,6 +7,7 @@
     border-radius: 5px;
     color: rgb(164, 125, 132);
     margin: 2px 0;
+    overflow: hidden;
 }
 
 /* Updated styles for input containers */
@@ -16,6 +17,7 @@
     background-color: rgba(255, 255, 255, 0.465);
     padding: 0.2vh;
     width: 80%;
+    overflow: hidden;
 }
 
 /* Updated styles for the signup form */
